--- a/portfolio.html
+++ b/portfolio.html
@@ -39,22 +39,51 @@
       </header>
 
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
-        <ul class="main-nav col-8 col-lg-6 col-xl-6 offset-2 offset-xl-2">
-          <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a></li>
-          <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a>
+        <ul class="main-nav col-8 col-md-5 col-lg-6 col-xl-6 offset-2 offset-md-4 offset-lg-2 offset-xl-2">
 
+          <li class="nav-item-1 d-none d-xl-block"><a href="who-we-are.html">WHO WE ARE</a>
+            <ul id="subNav1">
+            <li><a href="team.html">TEAM</a></li>
+            <li class="sub-2"><a href="press.html">PRESS</a></li>
+            <li class="sub-3"><a href="insights.html">INSIGHTS</a></li>
+            </ul>
+
+          </li>
+<li class="nav-item-1 d-xl-none"><a href="who-we-are.html">WHO WE ARE</a></li>
+<li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav1()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
+
+<li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
+  <ul>
+<li class="sub-1"><a href="team.html">TEAM</a></li>
+<li class="sub-2"><a href="press.html">PRESS</a></li>
+<li class="sub-3"><a href="insights.html">INSIGHTS</a></li>
+</ul>
+</li>
+
+
+          <li class="nav-item-2 d-none d-xl-block"><a href="what-we-do.html">WHAT WE DO</a>
             <ul id="subnav">
             <li><a href="brokerage.html">BROKERAGE</a></li>
             <li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
             <li class="sub-3"><a href="management.html">MANAGEMENT</a></li>
             </ul>
-          </li>
+  </li>
+<li class="nav-item-2 d-block d-xl-none"><a href="what-we-do.html">WHAT WE DO</a></li>
+          <li class="nav-item-2 d-xl-none" id="subnav-open"><a onclick="subNav()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
 
+          <li class="subnav-mobile-custom" id="subNavMobile">
+            <ul>
+          <li class="sub-1"><a href="brokerage.html">BROKERAGE</a></li>
+          <li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
+          <li class="sub-3"><a href="management.html">MANAGEMENT</a></li>
+        </ul>
+        </li>
 
-          <li class="nav-item-3" id="active"><a href="portfolio.html">PORTFOLIO</a></li>
+          <li class="nav-item-3 d-xl-none"><a href="portfolio.html">PORTFOLIO</a></li>
+            <li class="nav-item-3 d-none d-xl-block" id="active"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
-          <ul class="secondary-nav col-10 col-lg-4 col-xl-4 offset-1 offset-lg-0">
+          <ul class="secondary-nav col-8 col-md-5 offset-md-4 col-lg-4 col-xl-4 offset-2 offset-lg-0">
             <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
@@ -71,19 +100,19 @@
 
 
 
-              <ul class="filters col-12 col-lg-8 offset-lg-1 float-left float-left">
+              <ul class="filters col-10 col-lg-8 offset-md-1 float-left float-left">
                       <li><a href="#" class="filter" data-filter="all">ALL</a></li>
                       <li><a href="#" class="filter" data-filter=".current">CURRENT</a></li>
 
 
-                      <li class="margin-left"><a href="#" class="filter" data-filter=".east">URBAN</a></li>
+                      <li><a href="#" class="filter" data-filter=".east">URBAN</a></li>
                       <li><a href="#" class="filter" data-filter=".west">SUBURBAN</a></li>
 
                     </ul>
 
 
 
-            <ul class="containMix portfolio-container col-12 col-lg-10 offset-lg-1 float-left">
+            <ul class="containMix portfolio-container col-10 col-md-10 offset-1 float-left">
 
             <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
               <div class="portfolio-list col-12 float-left">
@@ -190,39 +219,43 @@
 
       </div>
 </div><!-- CLOSES MIXITUP CONTAINER -->
-            <footer class="col-12 d-none d-xl-block">
-              <ul class="col-4">
-                <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
-                <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
+<footer class="col-12 d-none d-xl-block">
+  <ul class="col-4">
+    <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
+    <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to Instragram"></a></li>
+    </ul>
+
+
+    <ul class="footer-nav col-4 offset-4">
+      <li><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+      <li><a href="accessibility.html">ACCESSIBILITY</a></li>
+      <li><a href="tenant-perks.html">TENANT PERKS</a></li>
+      <li><a href="careers.html">CAREERS</a></li>
+      </ul>
+
+  </footer>
+
+
+
+<section class="col-12 d-xl-none">
+        <footer class="mobile-footer col-12">
+
+
+
+            <ul class="col-10 offset-1">
+              <li class="link-outline-2 col-12"><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+              <li class="link-outline-2 col-12"><a href="accessibility.html">ACCESSIBILITY</a></li>
+              <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
+              <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
+              </ul>
+
+              <ul class="social-media-list col-4 offset-4">
+                <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
+                <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to instagram"></a></li>
                 </ul>
 
-
-                <ul class="footer-nav col-4 offset-4">
-                  <li><a href="#">BLOG</a></li>
-                  <li><a href="#">NEWS</a></li>
-                  <li><a href="#">CAREERS</a></li>
-                  <li><a href="#">TENANT PERKS</a></li>
-                  </ul>
-
-              </footer>
-
-            <section class="col-12 d-xl-none">
-                    <footer class="col-12">
-                      <ul class="col-4 offset-1">
-                        <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
-                        <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
-                        </ul>
-
-
-                        <ul class="col-7">
-                          <li><a href="#">BLOG</a></li>
-                          <li><a href="#">NEWS</a></li>
-                          <li><a href="#">CAREERS</a></li>
-                          <li><a href="#">TENANT PERKS</a></li>
-                          </ul>
-
-                      </footer>
-                    </section>
+          </footer>
+        </section>
 
                     <script src="js/jquery.2.min.js"></script>
                     <script src="js/jquery.mixitup.min.js"></script>
