--- a/team-management.html
+++ b/team-management.html
@@ -45,6 +45,7 @@
             <ul id="subNav1">
             <li><a href="team.html">TEAM</a></li>
             <li class="sub-2"><a href="press.html">PRESS</a></li>
+            <li class="sub-3"><a href="insights.html">INSIGHTS</a></li>
             </ul>
 
           </li>
@@ -55,6 +56,7 @@
   <ul>
 <li class="sub-1"><a href="team.html">TEAM</a></li>
 <li class="sub-2"><a href="press.html">PRESS</a></li>
+<li class="sub-3"><a href="insights.html">INSIGHTS</a></li>
 </ul>
 </li>
 
@@ -171,39 +173,44 @@
 
 
 
-<footer class="col-12 d-none d-xl-block">
-  <ul class="col-4">
-    <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
-    <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
-    </ul>
 
-
-    <ul class="footer-nav col-4 offset-4">
-      <li><a href="#">BLOG</a></li>
-      <li><a href="#">NEWS</a></li>
-      <li><a href="#">CAREERS</a></li>
-      <li><a href="#">TENANT PERKS</a></li>
+  <footer class="col-12 d-none d-xl-block">
+    <ul class="col-4">
+      <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
+      <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to Instragram"></a></li>
       </ul>
 
-  </footer>
 
-<section class="col-12 d-xl-none">
-        <footer class="col-12">
-          <ul class="col-4 offset-1">
-            <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
-            <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
-            </ul>
+      <ul class="footer-nav col-4 offset-4">
+        <li><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+        <li><a href="accessibility.html">ACCESSIBILITY</a></li>
+        <li><a href="tenant-perks.html">TENANT PERKS</a></li>
+        <li><a href="careers.html">CAREERS</a></li>
+        </ul>
+
+    </footer>
 
 
-            <ul class="col-7">
-              <li><a href="#">BLOG</a></li>
-              <li><a href="#">NEWS</a></li>
-              <li><a href="#">CAREERS</a></li>
-              <li><a href="#">TENANT PERKS</a></li>
-              </ul>
 
-          </footer>
-        </section>
+  <section class="col-12 d-xl-none">
+          <footer class="mobile-footer col-12">
+
+
+
+              <ul class="col-10 offset-1">
+                <li class="link-outline-2 col-12"><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+                <li class="link-outline-2 col-12"><a href="accessibility.html">ACCESSIBILITY</a></li>
+                <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
+                <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
+                </ul>
+
+                <ul class="social-media-list col-4 offset-4">
+                  <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
+                  <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to instagram"></a></li>
+                  </ul>
+
+            </footer>
+          </section>
  </div>
 
 
