--- a/what-we-do.html
+++ b/what-we-do.html
@@ -44,7 +44,8 @@
           <li class="nav-item-1 d-none d-xl-block"><a href="who-we-are.html">WHO WE ARE</a>
             <ul id="subNav1">
             <li><a href="team.html">TEAM</a></li>
-            <li class="sub-2"><a href="development.html">PRESS</a></li>
+            <li class="sub-2"><a href="press.html">PRESS</a></li>
+            <li class="sub-3"><a href="insights.html">INSIGHTS</a></li>
             </ul>
 
           </li>
@@ -53,8 +54,9 @@
 
 <li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
   <ul>
-<li class="sub-1"><a href="brokerage.html">TEAM</a></li>
-<li class="sub-2"><a href="development.html">PRESS</a></li>
+<li class="sub-1"><a href="team.html">TEAM</a></li>
+<li class="sub-2"><a href="press.html">PRESS</a></li>
+<li class="sub-3"><a href="insights.html">INSIGHTS</a></li>
 </ul>
 </li>
 
@@ -226,37 +228,45 @@ YOUR SPACE<br><span class="turquoise-underline">SETS THE PACE</span>
 
 <footer class="col-12 d-none d-xl-block">
   <ul class="col-4">
-    <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
-    <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
+    <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
+    <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to Instragram"></a></li>
     </ul>
 
 
     <ul class="footer-nav col-4 offset-4">
-      <li><a href="#">BLOG</a></li>
-      <li><a href="#">NEWS</a></li>
-      <li><a href="#">CAREERS</a></li>
-      <li><a href="#">TENANT PERKS</a></li>
+      <li><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+      <li><a href="accessibility.html">ACCESSIBILITY</a></li>
+      <li><a href="tenant-perks.html">TENANT PERKS</a></li>
+      <li><a href="careers.html">CAREERS</a></li>
       </ul>
 
   </footer>
 
+
+
 <section class="col-12 d-xl-none">
-        <footer class="col-12">
-          <ul class="col-4 offset-1">
-            <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
-            <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
-            </ul>
+        <footer class="mobile-footer col-12">
 
 
-            <ul class="col-7">
-              <li><a href="#">BLOG</a></li>
-              <li><a href="#">NEWS</a></li>
-              <li><a href="#">CAREERS</a></li>
-              <li><a href="#">TENANT PERKS</a></li>
+
+            <ul class="col-10 offset-1">
+              <li class="link-outline-2 col-12"><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+              <li class="link-outline-2 col-12"><a href="accessibility.html">ACCESSIBILITY</a></li>
+              <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
+              <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
               </ul>
+
+              <ul class="social-media-list col-4 offset-4">
+                <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
+                <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to instagram"></a></li>
+                </ul>
 
           </footer>
         </section>
+
+
+
+
  </div>
 
 
