--- a/who-we-are.html
+++ b/who-we-are.html
@@ -41,6 +41,8 @@
 
       </header>
 
+
+
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
         <ul class="main-nav col-8 col-md-5 col-lg-6 col-xl-6 offset-2 offset-md-4 offset-lg-2 offset-xl-2">
 
@@ -48,6 +50,7 @@
             <ul id="subNav1">
             <li><a href="team.html">TEAM</a></li>
             <li class="sub-2"><a href="press.html">PRESS</a></li>
+            <li class="sub-3"><a href="insights.html">INSIGHTS</a></li>
             </ul>
 
           </li>
@@ -56,8 +59,9 @@
 
 <li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
   <ul>
-<li class="sub-1"><a href="brokerage.html">TEAM</a></li>
+<li class="sub-1"><a href="team.html">TEAM</a></li>
 <li class="sub-2"><a href="press.html">PRESS</a></li>
+<li class="sub-3"><a href="insights.html">INSIGHTS</a></li>
 </ul>
 </li>
 
@@ -89,6 +93,8 @@
             </ul>
 
           </nav>
+
+
 
 <div class="scroll-container col-12 p-0" id="who-we-are">
       <section class="col-12" id="container-1">
@@ -210,36 +216,41 @@ PILLARS OF SUCCESS
 
 
 
+
 <footer class="col-12 d-none d-xl-block">
   <ul class="col-4">
-    <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
-    <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
+    <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
+    <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to Instragram"></a></li>
     </ul>
 
 
-    <ul class="footer-nav col-4 offset-4">
-      <li><a href="#">BLOG</a></li>
-      <li><a href="#">NEWS</a></li>
-      <li><a href="#">CAREERS</a></li>
-      <li><a href="#">TENANT PERKS</a></li>
+    <ul class="footer-nav col-5 offset-3">
+      <li><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+      <li><a href="accessibility.html">ACCESSIBILITY</a></li>
+      <li><a href="tenant-perks.html">TENANT PERKS</a></li>
+      <li><a href="careers.html">CAREERS</a></li>
       </ul>
 
   </footer>
 
+
+
 <section class="col-12 d-xl-none">
-        <footer class="col-12">
-          <ul class="col-4 offset-1">
-            <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
-            <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
-            </ul>
+        <footer class="mobile-footer col-12">
 
 
-            <ul class="col-7">
-              <li><a href="#">BLOG</a></li>
-              <li><a href="#">NEWS</a></li>
-              <li><a href="#">CAREERS</a></li>
-              <li><a href="#">TENANT PERKS</a></li>
+
+            <ul class="col-10 offset-1">
+              <li class="link-outline-2 col-12"><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+              <li class="link-outline-2 col-12"><a href="accessibility.html">ACCESSIBILITY</a></li>
+              <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
+              <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
               </ul>
+
+              <ul class="social-media-list col-4 offset-4">
+                <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
+                <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to instagram"></a></li>
+                </ul>
 
           </footer>
         </section>
