--- a/portfolio-bentley.html
+++ b/portfolio-bentley.html
@@ -94,7 +94,7 @@
         <span class="top"></span>
 
 
-<img src="assets/images/portfolio/bentley/bentley.png" alt="#" class="video-background">
+<img src="assets/images/portfolio/bentley/bentley.png" alt="#" class="bottom">
 
 
 <h1 class="col-10 offset-1"><span class="portfolio-delay-1">THE</span><br><span class="turquoise-underline portfolio-delay-2">BENTLEY</span></h1>
@@ -180,19 +180,11 @@
 
 <div class="link-container col-10 offset-1">
 
-  <a href="#" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
-</a>
-
-    <a href="#" class="col-12 link-outline-2"><p class="col-10">DOWNLOAD FLYER</p>
+    <a href="#" class="col-12 link-outline-2"><p class="col-10">REQUEST MORE INFO</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
 
-  <a href="#" class="col-12 link-outline-2"><p class="col-10">SCHEDULE TOUR</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
-    </a>
-
-  <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">CONTACT BROKER</p>
+  <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">SCHEDULE TOUR</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
 
