--- a/portfolio-bursca.html
+++ b/portfolio-bursca.html
@@ -89,16 +89,15 @@
 
           </nav>
 
-
 <div class="scroll-container col-12 p-0" id="property-landing">
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
 
-<img src="assets/images/portfolio/diamond-ridge/diamond-ridge.png" alt="#" class="video-background">
+<img src="assets/images/portfolio/bursca/bursca-3.png" alt="#" class="full-width">
 
 
-<h1 class="col-10 offset-1"><span class="portfolio-delay-1">DIAMOND</span><br><span class="turquoise-underline portfolio-delay-2">RIDGE</span></h1>
+<h1 class="col-10 offset-1"><span class="portfolio-delay-1">BURSCA</span><br><span class="portfolio-delay-2">BUSINESS</span><br><span class="turquoise-underline portfolio-delay-3">PARK</span></h1>
         </section>
 
 
@@ -117,28 +116,25 @@
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+
   </div>
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <img src="assets/images/portfolio/diamond-ridge/diamond-ridge-1.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/bursca/bursca.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/diamond-ridge/diamond-ridge-2.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/bursca/bursca-2.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/diamond-ridge/diamond-ridge-3.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/bursca/bursca-3.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/diamond-ridge/diamond-ridge-4.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/bursca/bursca-4.png" class="d-block w-100" alt="...">
     </div>
-
-
 
 
 
@@ -162,29 +158,28 @@
 <div class="col-12 col-lg-5 col-xl-4">
 
   <h2 class="col-10 offset-1">
-<span class="green-underline">DIAMOND RIDGE</span></h2>
-<h3 class="col-10 offset-1">Moon Township | 500,000 SF</h3>
+BURSCA<br><span class="green-underline">BUSINESS PARK</span></h2>
+<h3 class="col-10 offset-1">South Fayette | Business Park</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-  Diamond Ridge is the latest speculative development in the Burns Scalo Real Estate portfolio. This three-building campus in Moon Township will offer more than 500,000 square-feet of light-infused workspace in an amenity-rich campus connected to public transit and nestled in Pittsburgh’s largest submarket, the Parkway West.
-  <br><br>
-  The $130 Million development is being mindfully designed with abundant biophilic elements to connect office occupants to nature creating a soothing and healthy environment in which to work. Diamond Ridge is scheduled to begin development in 2021.
-
+Whether you’re looking for office, flex, showroom space, or even a combination of each, Bursca Business Park has what you need to take your business to new heights. Nestled in a park-like community just off Washington Pike, Bursca Business Park means “big business” for any sized business. Less than 1 mile from I-79 and surrounded by retail amenities, Bursca Business Park offers a wide range of flexible office solutions to help you meet the demands of your business.
 </p>
 
 
 <div class="link-container col-10 offset-1">
 
+  <a href="https://looplink.burnsscalorealestate.com/Listing/200-Bursca-Dr-Bridgeville-PA/18755871/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
+<img src="assets/arrow.svg" alt="#" class="col-2">
+</a>
 
-<a href="#" class="col-12 link-outline-2"><p class="col-10">SCHEDULE TOUR</p>
+  <a href="#" class="col-12 link-outline-2"><p class="col-10">REQUEST MORE INFO</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
 
-  <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">SCHEDULE TOUR</p>
+<a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">SCHEDULE TOUR</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
-    </a>
-
+  </a>
 
 </div>
 </div>
@@ -198,42 +193,47 @@
 
 
 
-        </div><!-- CLOSES SCROLL CONTAINER -->
+
+
 
         <footer class="col-12 d-none d-xl-block">
           <ul class="col-4">
-            <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
-            <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
+            <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
+            <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to Instragram"></a></li>
             </ul>
 
 
             <ul class="footer-nav col-4 offset-4">
-              <li><a href="#">BLOG</a></li>
-              <li><a href="#">NEWS</a></li>
-              <li><a href="#">CAREERS</a></li>
-              <li><a href="#">TENANT PERKS</a></li>
+              <li><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+              <li><a href="accessibility.html">ACCESSIBILITY</a></li>
+              <li><a href="tenant-perks.html">TENANT PERKS</a></li>
+              <li><a href="careers.html">CAREERS</a></li>
               </ul>
 
           </footer>
 
+
+
         <section class="col-12 d-xl-none">
-                <footer class="col-12">
-                  <ul class="col-4 offset-1">
-                    <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
-                    <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
-                    </ul>
+                <footer class="mobile-footer col-12">
 
 
-                    <ul class="col-7">
-                      <li><a href="#">BLOG</a></li>
-                      <li><a href="#">NEWS</a></li>
-                      <li><a href="#">CAREERS</a></li>
-                      <li><a href="#">TENANT PERKS</a></li>
+
+                    <ul class="col-10 offset-1">
+                      <li class="link-outline-2 col-12"><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+                      <li class="link-outline-2 col-12"><a href="accessibility.html">ACCESSIBILITY</a></li>
+                      <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
+                      <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
                       </ul>
+
+                      <ul class="social-media-list col-4 offset-4">
+                        <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
+                        <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to instagram"></a></li>
+                        </ul>
 
                   </footer>
                 </section>
-
+        </div><!-- CLOSES SCROLL CONTAINER -->
 
 <!-- DROPDOWN MENU SCRIPT
 <script>
