--- a/portfolio-eqt.html
+++ b/portfolio-eqt.html
@@ -95,10 +95,10 @@
         <span class="top"></span>
 
 
-<img src="assets/images/portfolio/diamond-ridge/diamond-ridge.png" alt="#" class="video-background">
+<img src="assets/images/portfolio/eqt/eqt-hero.png" alt="#" class="bottom">
 
 
-<h1 class="col-10 offset-1"><span class="portfolio-delay-1">DIAMOND</span><br><span class="turquoise-underline portfolio-delay-2">RIDGE</span></h1>
+<h1 class="col-10 offset-1"><span class="portfolio-delay-1">EQT</span><br><span class="turquoise-underline portfolio-delay-2">PLAZA</span></h1>
         </section>
 
 
@@ -123,19 +123,19 @@
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <img src="assets/images/portfolio/diamond-ridge/diamond-ridge-1.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/eqt/eqt.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/diamond-ridge/diamond-ridge-2.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/eqt/eqt-2.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/diamond-ridge/diamond-ridge-3.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/eqt/eqt-3.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/diamond-ridge/diamond-ridge-4.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/eqt/eqt-4.png" class="d-block w-100" alt="...">
     </div>
 
 
@@ -162,7 +162,7 @@
 <div class="col-12 col-lg-5 col-xl-4">
 
   <h2 class="col-10 offset-1">
-<span class="green-underline">DIAMOND RIDGE</span></h2>
+<span class="green-underline">EQT PLAZA</span></h2>
 <h3 class="col-10 offset-1">Moon Township | 500,000 SF</h3>
 
 
@@ -176,6 +176,9 @@
 
 <div class="link-container col-10 offset-1">
 
+  <a href="https://looplink.burnsscalorealestate.com/Listing/625-Liberty-Ave-Pittsburgh-PA/19465099/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
+<img src="assets/arrow.svg" alt="#" class="col-2">
+</a>
 
 <a href="#" class="col-12 link-outline-2"><p class="col-10">SCHEDULE TOUR</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
