--- a/portfolio.html
+++ b/portfolio.html
@@ -187,7 +187,7 @@
 
         <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
           <div class="portfolio-list col-12 float-left">
-            <a href="portfolio-beacon.html">
+            <a href="portfolio-bursca.html">
               <div class="col-12 p-0 portfolio-image-container">
           <img src="assets/images/portfolio/bursca.png" alt="#">
           </div>
@@ -216,7 +216,7 @@
 
       <li class="brokerage mix container-p col-12 col-md-4 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
-          <a href="portfolio-beacon.html">
+          <a href="portfolio-eqt-hero-1.html">
             <div class="col-12 p-0 portfolio-image-container">
         <img src="assets/images/portfolio/eqt.png" alt="#">
         </div>
